12-k8s-3_3/manifests/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
